--- a/layouts/default.html
+++ b/layouts/default.html
@@ -61,6 +61,9 @@
     <header>
         <h1>👑 {{ site.title }}</h1>
         <p>The Dynastic Tater of the Savanna</p>
+        <nav>
+            <a href="/">Home</a>
+        </nav>
     </header>
 
     <nav>
