--- a/layouts/default.html
+++ b/layouts/default.html
@@ -79,7 +79,7 @@
     </main>
 
     <footer>
-        <p>{% include footer.html %}</p>
+        <p>© 2025 Kingdom of Rhodesia | Powered by Llamas and Tots</p>
     </footer>
 </body>
 </html>
