--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -65,10 +65,7 @@
 
     <nav>
         <a href="/">Home</a>
-        <a href="#about">About</a>
-        <a href="#minister">Minister of Memes</a>
-        <a href="#gallery">Gallery</a>
-        <a href="#laws">Laws</a>
+        <a href="/poems/">Poems</a>
     </nav>
 
     <main>
