--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
             font-family: 'Comic Sans MS', cursive, sans-serif;
             background-color: #f5f5dc;
             color: #333;
-            margin: 0;
+            margin: 20px 20px;;
             padding: 0;
         }
         header {
@@ -37,11 +37,6 @@
             padding: 30px;
             max-width: 900px;
             margin: auto;
-        }
-        .gallery img {
-            width: 250px;
-            margin: 10px;
-            border: 4px solid #333;
         }
         footer {
             background-color: #006400;
