--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,6 +49,12 @@
             color: #555;
             margin-top: 20px;
         }
+        @media (max-width: 768px) {
+          img {
+            width: 100%;
+            height: auto;
+          }
+        }
     </style>
 </head>
 <body>
