--- a/_layouts/memes.html
+++ b/_layouts/memes.html
@@ -46,6 +46,12 @@
 </head>
 <body>
 
+  <nav>
+    <a href="/">Home</a>
+    <a href="/memes/">Memes</a>
+    <a href="/poems/">Poems</a>
+  </nav>
+  
   <div class="media-container">
     <img src="/assets/media/images/rhodesian-niggers.jpg" alt="rhodesian-niggers">
     <a class="download-btn" href="/assets/media/images/rhodesian-niggers.jpg" download>Download Image</a>
