--- a/_layouts/memes.html
+++ b/_layouts/memes.html
@@ -42,6 +42,17 @@
     .download-btn:hover {
       background-color: #009acd;
     }
+    nav {
+      background-color: #228B22;
+      text-align: center;
+      padding: 10px;
+    }
+    nav a {
+      color: white;
+      margin: 0 20px;
+      text-decoration: none;
+      font-weight: bold;
+    }
   </style>
 </head>
 <body>
