--- a/_layouts/memes.html
+++ b/_layouts/memes.html
@@ -53,10 +53,21 @@
       text-decoration: none;
       font-weight: bold;
     }
+    header {
+      background-color: #006400;
+      color: white;
+      padding: 30px;
+      text-align: center;
+    }
   </style>
 </head>
 <body>
 
+  <header>
+      <h1>👑 {{ site.title }}</h1>
+      <p>The Dynastic Tater of the Savanna</p>
+  </header>
+  
   <nav>
     <a href="/">Home</a>
     <a href="/memes/">Memes</a>
