--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
             font-family: 'Comic Sans MS', sans-serif;
             background-color: #f5f5dc;
             color: #333;
-            margin: 20px 20px;;
+            margin: 20px 20px;
             padding: 0;
         }
         header {
