--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -68,6 +68,7 @@
         <a href="/">Home</a>
         <a href="/memes/">Memes</a>
         <a href="/poems/">Poems</a>
+        <a href="/theme-song/">Theme Song</a>
     </nav>
 
     <main>
