--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -64,12 +64,7 @@
         <p>The Dynastic Tater of the Savanna</p>
     </header>
 
-    <nav>
-        <a href="/">Home</a>
-        <a href="/memes/">Memes</a>
-        <a href="/poems/">Poems</a>
-        <a href="/theme-song/">Theme Song</a>
-    </nav>
+{% include navbar.html %}
 
     <main>
         {{ content }}
