--- a/_layouts/theme-song.html
+++ b/_layouts/theme-song.html
@@ -41,12 +41,7 @@
     <p>The Dynastic Tater of the Savanna</p>
   </header>
 
-  <nav>
-    <a href="/">Home</a>
-    <a href="/memes/">Memes</a>
-    <a href="/poems/">Poems</a>
-    <a href="/theme-song/">Theme Song</a>
-  </nav>
+{% include navbar.html %}
   
   <video autoplay muted playsinline controls>
     <source src="/assets/media/videos/rhodesians-never-die.mp4" type="video/mp4">
