--- a/_layouts/memes.html
+++ b/_layouts/memes.html
@@ -68,11 +68,7 @@
       <p>The Dynastic Tater of the Savanna</p>
   </header>
   
-  <nav>
-    <a href="/">Home</a>
-    <a href="/memes/">Memes</a>
-    <a href="/poems/">Poems</a>
-  </nav>
+{% include navbar.html %}
   
   <div class="media-container">
     <img src="/assets/media/images/rhodesian-niggers.jpg" alt="rhodesian-niggers">
