--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -60,7 +60,7 @@
 <body>
 
     <header>
-        <h1>👑 {{ site.title }}</h1>
+        <h1>👑 {{ page.title }}</h1>
         <p>The Dynastic Tater of the Savanna</p>
     </header>
 
