--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -59,10 +59,7 @@
 </head>
 <body>
 
-    <header>
-        <h1>👑 {{ page.title }}</h1>
-        <p>The Dynastic Tater of the Savanna</p>
-    </header>
+{% include header.html %}
 
 {% include navbar.html %}
 
@@ -70,8 +67,6 @@
         {{ content }}
     </main>
 
-    <footer>
-        <p>© 2025 Kingdom of Rhodesia | Powered by Llamas and Tots</p>
-    </footer>
+{% include footer.html %}
 </body>
 </html>
