--- a/_layouts/theme-song.html
+++ b/_layouts/theme-song.html
@@ -36,10 +36,7 @@
 </head>
 <body>
 
-  <header>
-    <h1>👑 {{ site.title }}</h1>
-    <p>The Dynastic Tater of the Savanna</p>
-  </header>
+{% include header.html %}
 
 {% include navbar.html %}
   
