--- a/_layouts/memes.html
+++ b/_layouts/memes.html
@@ -66,6 +66,20 @@
 {% include header.html %}
   
 {% include navbar.html %}
+
+  <div class="media-container">
+    <video controls>
+      <source src="/assets/media/videos/true-art.mp4.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
+  </div>
+  
+  <div class="media-container">
+    <video controls>
+      <source src="/assets/media/videos/ben-shapiro-versus-the-goy.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
+  </div>
   
   <div class="media-container">
     <img src="/assets/media/images/rhodesian-niggers.jpg" alt="rhodesian-niggers">
