--- a/_layouts/memes.html
+++ b/_layouts/memes.html
@@ -69,7 +69,7 @@
 
   <div class="media-container">
     <video controls>
-      <source src="/assets/media/videos/true-art.mp4.mp4" type="video/mp4">
+      <source src="/assets/media/videos/true-art.mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
   </div>
