--- a/_layouts/memes.html
+++ b/_layouts/memes.html
@@ -69,6 +69,13 @@
 
   <div class="media-container">
     <video controls>
+      <source src="/assets/media/videos/white-mans-burden.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
+  </div>
+  
+  <div class="media-container">
+    <video controls>
       <source src="/assets/media/videos/true-art.mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
